# Morning-Dispatch

./: .env.example  .gitignore  HANDOFF_apple_intelligence_provider.md  HANDOFF_fable_review.md  HANDOFF_foreign_media_yield.md  HANDOFF_google_news_connector.md  HANDOFF_google_news_connector_implementation.md  HANDOFF_must_have_anchor_canonicalization.md  HANDOFF_must_have_content_rule.md  HANDOFF_podcast_subscription_model.md  HANDOFF_refactor_perf_execution.md  HANDOFF_refactor_perf_review.md  HANDOFF_serper_and_source_quality.md  HANDOFF_source_quality_improvements.md  PRD_websearch_cascade_mcp.md  README.md  config.example.yaml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
Docs/: Morning Dispatch Backlog.md  Morning Dispatch Engineering Design Document.md  dispatch-digest-layout-handoff.html  morning-dispatch-investment-brief.md  morning-dispatch-product-overview.md
backend/: Dockerfile
backend/agents/: __init__.py  agentic.py  brief_quality.py  critic.py  editor.py  editorial_decisions.py  source_audit.py  (+1 more)
config/: foreign_languages.json  prompts.yaml
deploy/: com.morning-dispatch.plist
scratch/: debug_discovery.py  debug_gmail_fetch.py  run_gmail_adapter.py  test_gmail.py  test_podcasts.py  trace_gmail_filtering.py  trace_lane_candidates.py  trace_runner_gmail.py  trace_runner_random_id.py  trace_runner_run.py
scripts/: brief_parity.py  install_launchd.sh  mcp_brave_search.sh  mcp_tavily.sh  mcp_tavily_secure.js  run_morning_dispatch.sh  scan_secrets.py  transcribe_with_parakeet.py
(+176 files in other folders)
